--- a/templates/nav.html
+++ b/templates/nav.html
@@ -8,26 +8,34 @@
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
-    <ul class="navbar-nav">
+    <ul class="navbar-nav mr-auto">
       <li class="nav-item">
         <a class="nav-link" href="{% url 'category' %}">Category</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Blog</a>
+        <a class="nav-link" href="#">News</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Contact</a>
       </li>
     </ul>
-    <div class="navbar-nav ml-auto">
-    {% if user.is_authenticated %}
-      <a class="nav-link" href="{% url 'profile' %}">{{ user.username }}</a>
-      <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
-    {% else %}
-      <a class="nav-link" href="{% url 'account_login' %}">Log In</a>
-      <a class="nav-link" href="{% url 'account_signup' %}">Register</a>
-    {% endif %}
-    </div>
+    <ul class="navbar-nav ml-auto">
+      {% if user.is_authenticated %}
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'profile' %}">{{ user.username }}</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
+      </li>
+      {% else %}
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'account_login' %}">Log In</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'account_signup' %}">Register</a>
+      </li>
+      {% endif %}
+    </ul>
     {% comment %} <ul class="navbar-nav">
         {% get_current_language as LANGUAGE_CODE %}
         {% get_available_languages as LANGUAGES %}
