Category working all

--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -5,6 +5,8 @@
 {% block head_title %}{% trans "Signup" %}{% endblock %}
 
 {% block content %}
+<br>
+<br>
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-lg-6">
@@ -31,4 +33,7 @@
           </div>
         </div>
       </div>
+    </div>
+  </div>
+</div>
 {% endblock %}
