--- a/templates/account/profile.html
+++ b/templates/account/profile.html
@@ -3,6 +3,8 @@
 {% load static %}
 
 {% block content %}
+<br>
+<br>
 <div class="container">
     <div class="row justify-content-center">
         <div class="col-sm-12 col-md-6 col-lg-6">
@@ -17,13 +19,15 @@
                     <p class="text-scondary"><b>Mobile:</b> {{ user.worker.phone }}</p>
                     
                 </div>
-                <button type="button" class="btn btn-secondary">
-                    <a style="text-decoration: none; color:white; font-weight:20" href="{% url 'worker_profile_edit' user.id %}">Edit profile information</a>
-                </button>
-                <br>
-                <button type="button" class="btn btn-success">
-                    <a style="text-decoration: none; color:white; font-weight:20" href="{% url 'category' %}">Apply for a job</a>
-                </button>
+                <div class="btn-group-vertical">
+                    <button type="button" class="btn btn-success">
+                        <a style="text-decoration: none; color:white; font-weight:20" href="{% url 'worker_profile_edit' user.id %}">Edit profile information</a>
+                    </button>
+                    <br>
+                    <button type="button" class="btn btn-success">
+                        <a style="text-decoration: none; color:white; font-weight:20" href="{% url 'category' 1 %}">Apply for a job</a>
+                    </button>
+                </div>
             {% elif user.is_authenticated and user.is_company %}
                 <img class="img-thumbnail" src="{{ user.company.image.url }}">
                 <div class="info">
@@ -34,13 +38,15 @@
                     <p class="text-scondary"><b>Mobile:</b> {{ user.company.phone }}</p>
                     
                 </div>
-                <button type="button" class="btn btn-secondary">
-                    <a style="text-decoration: none; color:white; font-weight:20" href="{% url 'company_profile_edit' user.id %}">Edit company information</a>
-                </button>
-                <br>
-                <button type="button" class="btn btn-success">
-                    <a style="text-decoration: none; color:white; font-weight:20" href="{% url 'category' %}">Find employees</a>
-                </button>
+                <div class="btn-group-vertical">
+                    <button type="button" class="btn btn-success">
+                        <a style="text-decoration: none; color:white; font-weight:20" href="{% url 'company_profile_edit' user.id %}">Edit company information</a>
+                    </button>
+                    <br>
+                    <button type="button" class="btn btn-success">
+                        <a style="text-decoration: none; color:white; font-weight:20" href="{% url 'category' 1 %}">Find employees</a>
+                    </button>
+                </div>
             {% else %}
                 <h2>You have to be login to view this page</h2>
             {% endif %}
