--- a/templates/base.html
+++ b/templates/base.html
@@ -8,11 +8,16 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'css/main.css' %}">
     {% block headers %}{% endblock headers %}
   </head>
-  <body>
+  <body class="body display-flex">
     {% include "nav.html" %}
-    {% block content %}{% endblock content %}
+
+    {% block content %}
+    
+    {% endblock content %}
+    {% include "footer.html" %}
 
     <!-- Optional JavaScript; choose one of the two! -->
 
