--- a/templates/category/company_form.html
+++ b/templates/category/company_form.html
@@ -4,30 +4,32 @@
 
 
 {% block content %}
-<div class="container">
-    <div class="row justify-content-center">
-        <div class="col-lg-6">
-            <div class="card">
-                <h1><b style="color:red">{{ user.username }}</b> are about to request a offer for <i style="color:green">{{ subcat.name }}</i></h1>
-                {% if user.is_authenticated and user.is_company %}
-                    <form class="profile-company" method="POST" enctype="multipart/form-data">
-                            {% csrf_token %}
-                            {{ form.start_date|as_crispy_field }}
-                            {% comment %} {{ form.start_date|as_crispy_field }} {% endcomment %}
-                            <br>
-                            <div class="button-wrapper submit">
-                                <input class="btn btn-primary" type="submit" value="Request price" />
-                            </div>
-                            <br>
-                    </form>
-                {% elif user.is_authenticated and user.is_worker %}
-                    <h2>You have to be register as Company to take offer for workers</h2>
-                {% else %}
-                    404
-                {% endif %}
+<br>
+<br>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-lg-6">
+                <div class="card">
+                    {% if user.is_authenticated and user.is_company %}
+                    <h1><b style="color:green">{{ user.username }}</b>- you are about to request a offer for <i style="color:green">{{ subcat.name }}</i></h1>
+                        <form class="profile-company" method="POST" enctype="multipart/form-data">
+                                {% csrf_token %}
+                                {{ form|crispy }}
+                                {% comment %} {{ form.start_date|as_crispy_field }} {% endcomment %}
+                                <br>
+                                <div class="button-wrapper submit">
+                                    <input class="btn btn-primary" type="submit" value="Request price" />
+                                </div>
+                                <br>
+                        </form>
+                    {% elif user.is_authenticated and user.is_worker %}
+                        <h2>You have to be register as Company to take offer for {{ subcat.name }}.</h2>
+                    {% else %}
+                        404
+                    {% endif %}
+                </div>
             </div>
         </div>
     </div>
-</div>
 
 {% endblock content %}
