--- a/templates/category/cv_form.html
+++ b/templates/category/cv_form.html
@@ -8,8 +8,9 @@
     <div class="row justify-content-center">
         <div class="col-lg-6">
             <div class="card">
-                <h1><b style="color:red">{{ user.username }}</b> are about to apply for job like <i style="color:green">{{ subcat.name }}</i></h1>
                 {% if user.is_authenticated and user.is_worker %}
+                    <h1><b style="color:red">{{ user.username }}</b>- you are about to apply for job like <i style="color:green">{{ subcat.name }}</i></h1>
+                    <p><b>Pleace fillup the CV for this position.</b></p>
                     <form class="profile-company" method="POST" enctype="multipart/form-data">
                             {% csrf_token %}
                             {{ form|crispy }}
@@ -20,8 +21,8 @@
                             </div>
                             <br>
                     </form>
-                {% elif user.is_authenticated and user.is_worker %}
-                    <h2>You have to be register as Wroker to apply for Job.</h2>
+                {% elif user.is_authenticated and user.is_company %}
+                    <h2>You have to be register as Worker to register your CV for {{ subcat.name }}. You are register as Company!</h2>
                 {% else %}
                     404
                 {% endif %}
