--- a/templates/nav.html
+++ b/templates/nav.html
@@ -10,7 +10,7 @@
   <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'category' %}">Category</a>
+        <a class="nav-link" href="{% url 'category' 1 %}">Category</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">News</a>
