--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,4 +1,55 @@
+<footer class="bg-light text-dark text-center text-lg-start">
+  <!-- Grid container -->
+  <div class="container p-4">
+    <!--Grid row-->
+    <div class="row">
+      <!--Grid column-->
+      <div class="col-lg-4 col-md-12 mb-4 mb-md-0">
+        <h5 class="text-uppercase">Contacts</h5>
 
-    <h5 class="footer">This is Footer Menu</h5>
-    <p class="text-scondary">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-    </p>
+        <p>My adress</p>
+        <p>My phone number</p>
+        <p>Мобилен: +359 892 999 092</p>
+      </div>
+      <!--Grid column-->
+
+      <!--Grid column-->
+      <div class="col-lg-5 col-md-6 mb-4 mb-md-0">
+        <h5 class="text-uppercase">Адрес</h5>
+          <p>MAP</p>
+      </div>
+      <!--Grid column-->
+
+      <!--Grid column-->
+      <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+        <h5 class="text-uppercase mb-0">Pages</h5>
+
+        <ul class="list-unstyled">
+          <br />
+          <li>
+            <a style="text-decoration: none; color:white; font-weight:20" href="#" class="text-dark">Home</a>
+          </li><br />
+          <li>
+            <a style="text-decoration: none; color:white; font-weight:20" href="#" class="text-dark">Category</a>
+          </li><br />
+          <li>
+            <a style="text-decoration: none; color:white; font-weight:20" href="#" class="text-dark">News</a>
+          </li><br />
+          <li>
+            <a style="text-decoration: none; color:white; font-weight:20" href="#" class="text-dark">FAQ</a>
+          </li>
+        </ul>
+      </div>
+      <!--Grid column-->
+    </div>
+    <!--Grid row-->
+  </div>
+  <!-- Grid container -->
+
+  <!-- Copyright -->
+  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+    © 2021 Copyright:Germany Arbite
+    <a style="text-decoration: none; color:white; font-weight:20" class="text-white" href="https://www.facebook.com/evgeni.petrov.90/">Develop by Evgeni Petrov</a>
+  </div>
+  <!-- Copyright -->
+</footer>
