--- a/templates/category/company_form.html
+++ b/templates/category/company_form.html
@@ -14,6 +14,11 @@
                     <h1><b style="color:green">{{ user.username }}</b>- you are about to request a offer for <i style="color:green">{{ subcat.name }}</i></h1>
                         <form class="profile-company" method="POST" enctype="multipart/form-data">
                                 {% csrf_token %}
+                                <div class="mb-3">
+                                    
+                                    {{ form.country|as_crispy_field }}
+                                    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                                </div>
                                 {{ form|crispy }}
                                 {% comment %} {{ form.start_date|as_crispy_field }} {% endcomment %}
                                 <br>
