--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 {% block headers %}
+<link rel="stylesheet" href="{% static 'css/home.css' %}">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Counter-Up/1.0.0/jquery.counterup.min.js"></script>
@@ -11,46 +12,49 @@
         <div class="main-header">
             <div class="col-lg-12 col-md-12 col-sm-12">
                 <h1 class="font-weight-light display-2"><span class="headerone">Germany Arbite</span></h1>
+                <h3 class="font-weight-light display-5"><span class="headerone">We are a liders in Humanresources. We provide best services for all employees and employers</span></h3>
+
             </div>
         </div>
     </div>
 </header>
 <div class="container">
-    <h2 style="text-center display:2">About us</h2>
+    <h2 class="about display-2">About us</h2>
     <p class="about-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-    <div class="container">
-        <div class="card-group">
-            <div class="card text-center" style="border: none;">
-                <img class="card-img-top mx-auto" style="width:300px; height:300px;" src="{{ home_context.card_one_image.url }}" alt="Card image cap">
-                <div class="card-body">
-                    <h5 class="card-title">Applyed CV's we recive</h5>
-                    <h6 class="counter">1245</h6>
-                </div>
+</div>
+<br>
+<div class="container">
+    <div class="card-group">
+        <div class="card text-center" style="border: none;">
+            <img class="card-img-top mx-auto" style="width:300px; height:300px;" src="{% static 'img/cv.jpeg' %}" alt="Card image cap">
+            <div class="card-body">
+                <h5 class="card-title">Applyed CV's we recive</h5>
+                <h6 class="counter">1245</h6>
             </div>
-            <div class="card text-center" style="border: none;">
-                <img class="card-img-top mx-auto" style="width:300px; height:300px;" src="{{ home_context.card_two_image.url }}" alt="Card image cap">
-                <div class="card-body">
-                    <h5 class="card-title">Working Hours we deliver</h5>
-                    <h6 class="counter">28216</h6>
-                </div>
+        </div>
+        <div class="card text-center" style="border: none;">
+            <img class="card-img-top mx-auto" style="width:300px; height:300px;" src="{% static 'img/clock3.jpeg' %}" alt="Card image cap">
+            <div class="card-body">
+                <h5 class="card-title">Working Hours we deliver</h5>
+                <h6 class="counter">28216</h6>
             </div>
-            <div class="card text-center" style="border: none;">
-                <img class="card-img-top mx-auto" style="width:300px; height:300px;" src="{{ home_context.card_three_image.url }}" alt="Card image cap">
-                <div class="card-body">
-                    <h5 class="card-title">Contracts with company</h5>
-                    <h6 class="counter">45</h6>>
-                </div>
+        </div>
+        <div class="card text-center" style="border: none;">
+            <img class="card-img-top mx-auto" style="width:300px; height:300px;" src="{% static 'img/sign.jpeg' %}" alt="Card image cap">
+            <div class="card-body">
+                <h5 class="card-title">Contracts with companys</h5>
+                <h6 class="counter">45</h6>
             </div>
         </div>
     </div>
-    <div class="counter">280</div>
+</div>
 
 <script>
     $(document).ready(function() {
         $(".counter").counterUp({
-            delay: 10,
-            time: 1500
+            delay: 20,
+            time: 2500
         });
-        });
+    });
 </script>
 {% endblock content %}
