--- a/templates/account/company_profile.html
+++ b/templates/account/company_profile.html
@@ -24,6 +24,7 @@
                     {% else %}
                         <h2>You have to be login to edit your profile info</h2>
                     {% endif %}
+                </div>
             </div>
         </div>
     </div>
