--- a/templates/category/worker_cvs.html
+++ b/templates/category/worker_cvs.html
@@ -16,7 +16,7 @@
                 <h2>{{ work.first_name }}</h2>
                 <h3>{{ work.last_name }}</h3>
                 <h3>{{ work.user.email }}</h3>
-                <img src="{{ work.image.url }}" alt="Card image cap">
+                <img src="{{ work.image.url }}" style="width:125px; height:125px;" alt="Card image cap">
             {% endfor %}
 
 
