--- a/templates/category/cv_detail.html
+++ b/templates/category/cv_detail.html
@@ -10,9 +10,32 @@
                 {% elif user.is_authenticated and user.is_company %}
                     <h1>Cv- {{ cv.job }}</h1>
                 {% endif %}
-                    <img src="{{ workers.image.url }}" style="width:200px; height:auto;">
-                    <h5>Username: {{ cv.worker.username }}</h5>
             </div>
+            <div class="col-lg-12 col-md-12 col-sm-12">
+                <div class="card-group">
+                    <div class="card border-light">
+                        <img src="{{ workers.image.url }}" style="width:200px; height:auto;">
+                        <div class="card-header">Profile</div>
+                        <div class="card-body">
+                            <h5 class="card-title">First Name: {{ workers.first_name }}</h5>
+                            <h5 class="card-title">Last Name: {{ workers.last_name }}</h5>
+                        </div>
+                    </div>
+                    <div class="card border-light">
+                        <div class="card-header">Languages</div>
+                        <div class="card-body">
+                            <h5 class="card-title">First: {{ cv.first_lang }}</h5>
+                            <p class="card-text">Level: {{ cv.first_lang_level }}</p>
+                            <h5 class="card-title">First: {{ cv.secound_lang }}</h5>
+                            <p class="card-text">Level: {{ cv.secound_lang_level }}</p>
+                            <h5 class="card-title">First: {{ cv.third_lang }}</h5>
+                            <p class="card-text">Level: {{ cv.third_lang_level }}</p>
+                    </div>
+                    
+                </div>
+
+            </div>
+
         </div>
     </div>
 
