--- a/templates/category/order_detail.html
+++ b/templates/category/order_detail.html
@@ -10,7 +10,7 @@
         <br>
             <div class="card">
                 <div class="card-header">
-                    <h1>{{ comp.company_name }} you just request a offer for: {{ order.job_titlle }}. Thank you for trusting us. We will contact you soon.</h1>
+                    <h1>{{ comp.company_name }}- your application for: {{ order.job_titlle }}. Thank you for trusting us. We will contact you soon.</h1>
                 </div>
                 <div class="card-body">
                     <h3 class="card-title">Your order</h3>
