--- a/templates/category/company_form.html
+++ b/templates/category/company_form.html
@@ -6,35 +6,35 @@
 {% block content %}
 <br>
 <br>
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-lg-6">
-                <div class="card">
-                    {% if user.is_authenticated and user.is_company %}
-                    <h1><b style="color:green">{{ user.username }}</b>- you are about to request a offer for <i style="color:green">{{ subcat.name }}</i></h1>
-                        <form class="profile-company" method="POST" enctype="multipart/form-data">
-                                {% csrf_token %}
-                                <div class="mb-3">
-                                    
-                                    {{ form.country|as_crispy_field }}
-                                    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-                                </div>
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="col-lg-12 col-md-12 col-sm-12">
+            {% if user.is_authenticated and user.is_company %}
+            <h1><b>{{ user.username }}</b>- you are about to send application for <i style="color:black">{{ subcat.name }}</i></h1>
+                <br>
+                <form class="profile-company" method="POST" enctype="multipart/form-data">
+                    {% csrf_token %}
+                    <div class="row row-cols-1 row-cols-md-2 g-4">
+                        <div class="card h-100">
+                            <div class="card-body">
                                 {{ form|crispy }}
                                 {% comment %} {{ form.start_date|as_crispy_field }} {% endcomment %}
                                 <br>
                                 <div class="button-wrapper submit">
-                                    <input class="btn btn-primary" type="submit" value="Request price" />
+                                    <input class="btn btn-success" type="submit" value="Request price" />
                                 </div>
                                 <br>
-                        </form>
-                    {% elif user.is_authenticated and user.is_worker %}
-                        <h2>You have to be register as Company to take offer for {{ subcat.name }}.</h2>
-                    {% else %}
-                        404
-                    {% endif %}
-                </div>
-            </div>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+            {% elif user.is_authenticated and user.is_worker %}
+                <h2>You have to be register as Company to take offer for {{ subcat.name }}.</h2>
+            {% else %}
+                404
+            {% endif %}
         </div>
     </div>
+</div>
 
 {% endblock content %}
