--- a/templates/category/cv_form.html
+++ b/templates/category/cv_form.html
@@ -6,18 +6,82 @@
 {% block content %}
 <div class="container">
     <div class="row justify-content-center">
-        <div class="col-lg-6">
-            <div class="card">
+        <div class="col-lg-12 col-md-12 col-sm-12">
                 {% if user.is_authenticated and user.is_worker %}
-                    <h1><b style="color:red">{{ user.username }}</b>- you are about to apply for job like <i style="color:green">{{ subcat.name }}</i></h1>
-                    <p><b>Pleace fillup the CV for this position.</b></p>
+                    <h1><b>{{ user.username }}</b>- you are about to apply for <i>{{ subcat.name }}</i></h1>
+                    <p><b>Create your Cv.</b></p>
                     <form class="profile-company" method="POST" enctype="multipart/form-data">
                             {% csrf_token %}
-                            {{ form|crispy }}
-                            {% comment %} {{ form.start_date|as_crispy_field }} {% endcomment %}
-                            <br>
+                            <div class="row row-cols-1 row-cols-md-3 g-4">
+                                <div class="col">
+                                    <div class="card h-100">
+                                        
+                                        <div class="card-body">
+                                            <h2 class="card-title"><span class="badge bg-secondary">Info</span></h2>
+                                            {{ form.birth_day|as_crispy_field }}
+                                            {{ form.gender|as_crispy_field }}
+                                            {{ form.driving_license|as_crispy_field }}
+                                            {{ form.ready_to_start|as_crispy_field }}
+                                            {{ form.expectet_salary|as_crispy_field }}
+                                            {{ form.sertificate_1|as_crispy_field }}
+                                            {{ form.sertificate_2|as_crispy_field }}
+                                            
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col">
+                                    <div class="card h-100">
+                                        <div class="card-body">
+                                            <h2 class="card-title"><span class="badge bg-secondary">Languages</span></h2>
+                                            {{ form.first_lang|as_crispy_field }}
+                                            {{ form.first_lang_level|as_crispy_field }}
+                                            {{ form.second_lang|as_crispy_field }}
+                                            {{ form.second_lang_level|as_crispy_field }}
+                                            {{ form.third_lang|as_crispy_field }}
+                                            {{ form.third_lang_level|as_crispy_field }}
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col">
+                                    <div class="card h-100">
+                                        <div class="card-body">
+                                            <h2 class="card-title"><span class="badge bg-secondary">Last employers</span></h2>
+                                            {{ form.country_1|as_crispy_field }}
+                                            {{ form.company_name_1|as_crispy_field }}
+                                            {{ form.position_1|as_crispy_field }}
+                                            {{ form.start_date_1|as_crispy_field }}
+                                            {{ form.end_date_1|as_crispy_field }}
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col">
+                                    <div class="card h-100">
+                                        <div class="card-body">
+                                            <h2 class="card-title"><span class="badge bg-secondary">Second employers</span></h2>
+                                            {{ form.country_2|as_crispy_field }}
+                                            {{ form.company_name_2|as_crispy_field }}
+                                            {{ form.position_2|as_crispy_field }}
+                                            {{ form.start_date_2|as_crispy_field }}
+                                            {{ form.end_date_2|as_crispy_field }}
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col">
+                                    <div class="card h-100">
+                                        <div class="card-body">
+                                            <h2 class="card-title"><span class="badge bg-secondary">Third employers</span></h2>
+                                            {{ form.country_3|as_crispy_field }}
+                                            {{ form.company_name_3|as_crispy_field }}
+                                            {{ form.position_3|as_crispy_field }}
+                                            {{ form.start_date_3|as_crispy_field }}
+                                            {{ form.end_date_3|as_crispy_field }}
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <br/>
                             <div class="button-wrapper submit">
-                                <input class="btn btn-primary" type="submit" value="Apply for {{ subcat.name }}" />
+                                <input class="btn btn-success" type="submit" value="Apply for {{ subcat.name }}" />
                             </div>
                             <br>
                     </form>
@@ -26,7 +90,6 @@
                 {% else %}
                     404
                 {% endif %}
-            </div>
         </div>
     </div>
 </div>
