All functionalyty working

--- a/templates/category/cv_form.html
+++ b/templates/category/cv_form.html
@@ -22,7 +22,7 @@
                                             {{ form.gender|as_crispy_field }}
                                             {{ form.driving_license|as_crispy_field }}
                                             {{ form.ready_to_start|as_crispy_field }}
-                                            {{ form.expectet_salary|as_crispy_field }}
+                                            {{ form.expectet_salary|as_crispy_field }}€
                                             {{ form.sertificate_1|as_crispy_field }}
                                             {{ form.sertificate_2|as_crispy_field }}
                                             
