--- a/templates/category/cv_list.html
+++ b/templates/category/cv_list.html
@@ -10,7 +10,7 @@
             {% for c in cv %}
             <div class="card">
                 <div class="card-header">
-                    Date you apply or edit your cv- {{ c.submit_date }}
+                    Date you apply- {{ c.submit_date }}
                 </div>
                 <div class="card-body">
                     <h5 class="card-title">{{ c.job }} - Position you apply</h5>
