--- a/templates/category/order_list.html
+++ b/templates/category/order_list.html
@@ -6,7 +6,7 @@
     <div class="row">
         <div class="col-lg-12 col-md-12 col-sm-12">
         <br>
-        <h1>{{ user.username }} - This is yours requests for employers.</h1>
+        <h1>{{ user.username }} - This is yours applications for employee.</h1>
             {% for c in order %}
             <div class="card">
                 <div class="card-header">
