--- a/templates/category/order_detail.html
+++ b/templates/category/order_detail.html
@@ -11,6 +11,7 @@
             <div class="card">
                 <div class="card-header">
                     <h1>{{ comp.company_name }}- your application for: {{ order.job_titlle }}. Thank you for trusting us. We will contact you soon.</h1>
+                    <p>Last updated on {{ order.update_date }}</p>
                 </div>
                 <div class="card-body">
                     <h3 class="card-title">Your order</h3>
