--- a/templates/category/worker_cvs.html
+++ b/templates/category/worker_cvs.html
@@ -20,19 +20,21 @@
             {% endfor %} {% endcomment %}
 
 <div class="row row-cols-1 row-cols-md-3 g-4">
-{% for c in workers %}
-
+{% for c in cv %}
     <div class="col">
-        <div class="card h-100">
-            <img src="{{ c.worker.image.url }}" style="width:225px; height:225px;" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">{{ c.worker.last_name }}</h5>
-                <p class="card-text">{{ c.worker.first_name }}</p>
+        <a href="{% url 'cv_detail' c.id %}">
+
+            <div class="card h-100">
+                
+                <div class="card-body">
+                    <h5 class="card-title">{{ c.worker.last_name }}</h5>
+                    <p class="card-text">{{ c.worker.first_name }}</p>
+                </div>
             </div>
-        </div>
+        </a>
     </div>
-    
 {% endfor %}
+<img src="{{ workers.img.url }}">
 </div>
 
 {% endblock content %}
