--- a/templates/nav.html
+++ b/templates/nav.html
@@ -19,7 +19,7 @@
         <a class="nav-link" href="{% url 'faq' %}">FAQ</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Contact</a>
+        <a class="nav-link" href="{% url 'contact' %}">Contact</a>
       </li>
     </ul>
     <ul class="navbar-nav">
